Closed
Bug 255432
Opened 21 years ago
Closed 21 years ago
Ctrl-f, Ctrl-g, F3 cannot be used to search for text in a ftp-listing
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.8alpha4
People
(Reporter: k_b0000, Assigned: Biesinger)
References
()
Details
(Keywords: regression)
Attachments
(1 file)
|
2.32 KB,
patch
|
bzbarsky
:
review+
darin.moz
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8a3) Gecko/20040809
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8a3) Gecko/20040809
Ctrl-f, Ctrl-g cannot be used to search for text in a ftp-listing
they are also grey marked on the Edit menu.
it is possible to use type ahead to find some word once, but then when pressing
Ctrl-g or F3 to find next nothing happens.
Reproducible: Always
Steps to Reproduce:
1. see above
Actual Results:
searching more then onece not possible
Expected Results:
should be possible
Comment 1•21 years ago
|
||
Presumably a progress listener issue?
Comment 2•21 years ago
|
||
WFM with a gtk2 trunk build from Aug 10.
still not good in:
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8a3) Gecko/20040812
i did remove everything in my profile except the prefs.js and the bookmarks.html
file. mozilla is run on fedora core 2 if that makes any difference.
Comment 4•21 years ago
|
||
Old versions of Mozilla would show the MIME type as text/html in Page Info but
the trunk now shows it as application/http-index-format - is that intentional?
Component: Browser-General → DOM
Comment 5•21 years ago
|
||
(In reply to comment #2)
> WFM with a gtk2 trunk build from Aug 10.
Strike that. I was going over a proxy. :-( I'm now seeing this, too.
Assignee: general → general
Status: UNCONFIRMED → NEW
Ever confirmed: true
QA Contact: general → ian
can this problem have somthing to with the way directory listings are handled,
not just ftp-listing?
the same problem occurs when listing a local directory, ie:
file:///home/user/
Comment 7•21 years ago
|
||
biesi: this sounds like fallout from bug 247607.
Blocks: 247607
Keywords: regression
| Assignee | ||
Comment 8•21 years ago
|
||
hmm, why does the stream converter not set a new content type on the channel?
and, if it doesn't, why does anything work? taking for now...
Assignee: general → cbiesinger
Target Milestone: --- → mozilla1.8alpha4
| Assignee | ||
Comment 9•21 years ago
|
||
answer: content-type setting happens too late.
things worked because this thingy is a document viewer or something, not
directly a stream listener.
| Assignee | ||
Updated•21 years ago
|
Attachment #157349 -
Flags: review?(bzbarsky)
| Assignee | ||
Updated•21 years ago
|
Status: NEW → ASSIGNED
Comment 10•21 years ago
|
||
Comment on attachment 157349 [details] [diff] [review]
set content type earlier
r=bzbarsky
Attachment #157349 -
Flags: review?(bzbarsky) → review+
| Assignee | ||
Updated•21 years ago
|
Attachment #157349 -
Flags: superreview?(darin)
Comment 11•21 years ago
|
||
Comment on attachment 157349 [details] [diff] [review]
set content type earlier
maybe change
// set ... up
to
// setup ...
?
sr=darin
Attachment #157349 -
Flags: superreview?(darin) → superreview+
| Assignee | ||
Comment 12•21 years ago
|
||
checked in, with comment changed
Checking in xpfe/components/directory/nsDirectoryViewer.cpp;
/cvsroot/mozilla/xpfe/components/directory/nsDirectoryViewer.cpp,v <--
nsDirectoryViewer.cpp
new revision: 1.115; previous revision: 1.114
done
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Updated•7 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•