Bug 255432 make sure to set the content type on the channel early enough r=bzbarsky sr=darin